[package]
name = "futures-mutex"
version = "0.3.0"
authors = ["Adam Jacobus <adam.m.jacobus@gmail.com>", "Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
description = "A Mutex for the Future(s)"
readme = "README.md"
documentation = "https://docs.rs/futures-mutex"
repository = "https://github.com/paritytech/futures-mutex"
keywords = ["future", "futures", "mutex", "concurrency"]
categories = ["asynchronous", "concurrency"]

[dependencies]
futures = "0.1.14"
parking_lot = "0.5.3"
